--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"node-red-nodes-cf-sqldb-dashdb":"0.x",
         "request":"~2.36.0",
         "js2xmlparser":"~0.1.3",
-        "getmac":"1.0.x"
+        "getmac":"1.0.x",
+        "node-red-node-random":"0.0.6" 
     },
     "engines": {
         "node": "0.12.x"
