--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "request":"~2.36.0",
         "js2xmlparser":"~0.1.3",
         "getmac":"1.0.x",
-        "node-red-node-random":"0.0.6" 
+        "node-red-node-random":"0.0.6",
+        "crc":"3.x"
     },
     "engines": {
         "node": "0.12.x"
