--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "js2xmlparser":"~0.1.3",
         "getmac":"1.0.x",
         "node-red-node-random":"0.0.6",
-        "crc":"3.x"
+        "crc":"3.x",
+        "dateformat":"1.0.12"
     },
     "engines": {
         "node": "0.12.x"
