--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
         "request":"~2.36.0",
         "js2xmlparser":"~0.1.3",
         "getmac":"1.0.x",
+        "node-red-contrib-moment":"2.0.0", 
         "node-red-node-random":"0.0.6",
-        "crc":"3.x",
-        "node-red-contrib-moment":"2.0.0"
+        "crc":"3.x"
     },
     "engines": {
         "node": "0.12.x"
